# pingo

./: .gitignore  .gitmodules  CMakeLists.txt  Pingo.pro  README.md  main.cpp  manualmake.sh
.github/workflows/: c-cpp.yml
assets/: pingo.c  pingo.h  teapot.c  teapot.h
backend/: ttgobackend.c  ttgobackend.h
backend/tft_espi/: spi_master_lobo.h  tftspi.c  tftspi.h
example/: consolebackend.c  consolebackend.h  cube.c  cube.cpp  linux_window_backend.c  linux_window_backend.h  linuxtermbackend.c  linuxtermbackend.h  main-linux.c  main-win.c  main.c  memorybackend.c  memorybackend.h  pingo_mesh.c  teapot.c  teapot.h  terminalbackend.c  terminalbackend.h  ttgobackend.c  ttgobackend.h  viking.c  windowbackend.c  windowbackend.h
example/example_assets/: cube.h  viking.h
example/linux_framebuffer/: linux_framebuffer_backend.c  linux_framebuffer_backend.cpp  linux_framebuffer_backend.h  main.c
example/linux_window/: linux_window_backend.c  linux_window_backend.h  main.c
example/render_to_image/: jpeg_backend.c  jpeg_backend.h  main.c
example/terminal/: main.c  terminalbackend.c  terminalbackend.h
example/win32_window/: main.c  windowbackend.c  windowbackend.h
math/: fun.h  mat3.c  mat3.h  mat4.c  mat4.h  rectI.h  transform.c  transform.h  types.h  vec2.c  vec2.h  vec3.c  vec3.h  vec4.c  vector2I.h
render/: array.c  array.h  backend.h  depth.c  depth.h  entity.c  entity.h  frame.c  frame.h  material.c  material.h  mesh.c  mesh.h  object.c  object.h  pixel.c  pixel.h  rasterizer.c  rasterizer.h  renderable.h  renderer.c  renderer.h  scene.c  scene.h  sprite.c  sprite.h  state.h  texture.c  texture.h
renderable/: qrcode.c  qrcode.h  renderable.h  sprite.c  sprite.h
